# libression

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  libression.Dockerfile  main.py  pyproject.toml  requirements.txt  storage.Dockerfile  web.Dockerfile  webdav-docker-entrypoint.sh  webdav.Dockerfile
.github/workflows/: test.yml
api/: .pre-commit-config.yaml  alembic.ini  pyproject.toml
api/libression/: config.py  media_vault.py
api/libression/entities/: base.py
api/libression/thumbnail/: __init__.py  image.py  phash.py
api/tests/: conftest.py  manual_test.py  test_media_vault.py
api/tests/fixtures/: minimal.heif  minimal.mpeg  minimal_15_frames.avi
file/: cache.py  organiser.py  s3.py
frontend/: env.d.ts  package-lock.json  package.json  types.ts
frontend/app/: layout.tsx  page.tsx
frontend/public/: manifest.json
libression/: async_s3.py  config.py  controller.py  entities.py  exceptions.py  impression.py  io_handler.py  main.py  manager.py  media_vault.py  organiser.py  s3.py  s3_old.py  thumbnail.py
libression/db/: client.py
libression/entities/: base.py  db.py  io.py  media.py
libression/io_handler/: in_memory.py  s3.py  webdav.py
libression/router/: media_router.py
libression/thumbnail/: __init__.py  image.py  phash.py
sample_config/: linux_webdav.conf  mac_nginx.conf  nginx_docker.conf
sample_deployment/: README.md  docker-compose.yml  mac_nginx.conf  nginx_docker.conf  webdav-docker-entrypoint.sh  webdav.Dockerfile
samples/: mac_nginx.conf
static/: file_action.js  gallery.js  main.js  styles.css  updater.js
templates/: base.html  layout.html  navigator.html  navigator_copy.html  rubbish.html
test/: test_s3.py
test/file/: test_s3.py
tests/: conftest.py  manual_test.py  test_io_handler.py  test_media_vault.py  test_organiser.py  test_s3.py  test_thumbnail.py
tests/db/: test_client.py
tests/fixtures/: minimal.avi  minimal.avif  minimal.jxl  minimal.mov  minimal.tiff  minimal.webm  minimal_15_frames.mov  minimal_15_frames.mpeg
tests/router/: test_media_router.py
tests/thumbnail/: test_image.py  test_phash.py  test_thumbnail.py
(+15 files in other folders)
