[tool.poetry]
name = "libression"
version = "0.1.0"
description = "self-hosting media organiser"
authors = ["ern chow <chilledgeek@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
botocore = "^1.29.81"
fastapi = "^0.95"
uvicorn = "^0.22"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pillow = "^9.5.0"
boto3 = "^1.26.137"
pillow-heif = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.1.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
